<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/mScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_100"
                android:layout_marginTop="@dimen/margin_1"
                android:background="@android:color/black"
                android:gravity="center"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_26" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin_10">

                <ImageView
                    android:id="@+id/image_thumbnail"
                    android:layout_width="@dimen/width_185"
                    android:layout_height="@dimen/height_280"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:paddingLeft="@dimen/pad_10"
                    android:paddingRight="@dimen/pad_10" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_20"
                        android:paddingBottom="@dimen/pad_20"
                        android:text="@string/rating"
                        android:textSize="@dimen/text_size_26"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/pad_20"
                        android:text="@string/rating_num"
                        android:textSize="@dimen/text_size_16" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/pad_20"
                        android:text="@string/release_date"
                        android:textSize="@dimen/text_size_26"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/pad_20"
                        android:text="@string/release_date_time"
                        android:textSize="@dimen/text_size_16" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnFavourite"
                    android:layout_width="@dimen/size50"
                    android:layout_height="@dimen/size50"
                    android:layout_gravity="right"
                    android:src="@drawable/ic_star_empty"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

            <TextView
                android:id="@+id/synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10"
                android:text="@string/synopsis"
                android:textSize="@dimen/text_size_16" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/size2"
                android:background="@android:color/black">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pad_10">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pad_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ToggleButton
                        android:id="@+id/btnReview"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size20"
                        android:layout_marginRight="@dimen/size5"
                        android:background="@android:color/black"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textOff="Show"
                        android:textOn="Close" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:text="@string/reviews"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="bold" />

                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/pad_10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ToggleButton
                        android:id="@+id/btnTrailer"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/size20"
                        android:layout_marginRight="@dimen/size5"
                        android:background="@android:color/black"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textOff="Show"
                        android:textOn="Close" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:text="@string/trailer"
                        android:textSize="@dimen/text_size_20"
                        android:textStyle="bold" />

                </LinearLayout>


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <TextView
                android:id="@+id/idMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>